# dualarm_mobile_sim

./: .gitignore  CMakeLists.txt  README.md  read_plot_vals.py
01-dynamic_sim/: 01-dynamic_sim.cpp  CMakeLists.txt  simviz.cpp
01-kinematic_sim/: 01-kinematic_sim.cpp  CMakeLists.txt  main.cpp  test.cpp  world.urdf
02-dual_arm_sim/: CMakeLists.txt  dual_arm_mobile.urdf  dual_arm_sim.cpp  mobilebase.urdf  simviz.cpp  temp.xml  world.urdf
Model/: panda_arm.urdf  panda_arm_hand.urdf  world.urdf
Model/mobilebase/: CMakeLists.txt  package.xml
Model/mobilebase/config/: joint_names_mobilebase.yaml
Model/mobilebase/launch/: display.launch  gazebo.launch
Model/mobilebase/meshes/: base_link.STL  torso.STL
Model/mobilebase/urdf/: mobilebase.urdf
